ubiquity (1.10.11) UNRELEASED; urgency=low

  * Check to make sure a gdk window is mapped before calling
    cairo_create (LP: #208800).
  * Reset next_go_backup after encountering a question marked as seen
    (LP: #290760).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 29 Oct 2008 19:00:04 +0000

ubiquity (1.10.10) intrepid; urgency=low

  [ Evan Dandrea ]
  * Also set the EGID back to 0 when regaining privileges (LP: #288479).

  [ Colin Watson ]
  * Fix permissions on kernel images copied from /cdrom/casper/
    (LP: #290798).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 29 Oct 2008 18:51:06 +0000

ubiquity (1.10.9) intrepid; urgency=high

  * Always copy the kernel from /cdrom/casper/ if it's there regardless of
    whether any kernels are already present in /target/boot/, since those
    could just be due to a preserve-home install (LP: #287747).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 29 Oct 2008 15:26:24 +0000

ubiquity (1.10.8) intrepid; urgency=low

  [ Jonathan Riddell ]
  * KDE Frontend, in liveinstaller.ui change size policy to
    stop release notes widget being half hidden
  * ubiquity-dm: turn off compositing for kwin (also don't run dcopserver)
    Closes LP: #285626

  [ Evan Dandrea ]
  * Optimize the blacklist generation.  Thanks Colin Watson.
  * Add ubiquity/install/generate-blacklist preseed key for file
    blacklist generation.

  [ Colin Watson ]
  * Clip the resize widget's value to the allowed minimum and maximum size,
    and pass it to the backend as an exact size rather than as a percentage
    to avoid rounding errors (LP: #287547).
  * Automatic update of included source packages: grub-installer
    1.32ubuntu10, kboot-installer 0.0.1ubuntu8, partman-target 55ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 26 Oct 2008 04:19:31 +0000

ubiquity (1.10.7) intrepid; urgency=low

  [ Jonathan Riddell ]
  * Use Oxygen style in KDE UI

  [ Andreas Wenning ]
  * Edit ubiquity/frontend/kde_ui.py to correctly open the url for